--- a/package.json
+++ b/package.json
@@ -1,14 +1,29 @@
 {
   "name": "js-vnc",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "description": "JS VNC Demo",
+  "main": "server.js",
+  "dependencies": {
+    "bmp-js": "^0.0.1",
+    "express": "^4.12.4",
+    "connect": "^3.4.0",
+    "rfb2": "^0.0.10",
+    "jpeg-js": "^0.1.1",
+    "socket.io": "^1.3.6"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
   "repository": {
     "type": "git",
-    "url": "http://github.com/mgechev/js-vnc"
+    "url": "git+https://github.com/multippt/js-vnc-demo-project.git"
   },
-  "dependencies": {
-    "connect": "~2.8.5",
-    "express": "~4.12.4",
-    "rfb": "^0.2.3",
-    "socket.io": "^0.9.17"
-  }
+  "author": "",
+  "license": "",
+  "bugs": {
+    "url": "https://github.com/multippt/js-vnc-demo-project/issues"
+  },
+  "homepage": "https://github.com/multippt/js-vnc-demo-project#readme"
 }
